--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-minimizer-webpack-plugin": "^5.0.1",
     "html-webpack-plugin": "^5.6.0",
     "image-minimizer-webpack-plugin": "^4.0.0",
+    "imagemin": "^8.0.1",
     "imagemin-mozjpeg": "^10.0.0",
     "mini-css-extract-plugin": "^2.7.7",
     "postcss": "^8.4.33",
